--- a/public/css/main.css
+++ b/public/css/main.css
@@ -199,4 +199,40 @@ body {
   font-family: "BebasNeue-Regular";
   font-size: 18px;
 }
+
+.error {
+  width: 60vw;
+  height: 85vh;
+  background: #fff;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.error__title {
+  font-family: "BebasNeue-Bold";
+  font-size: 150px;
+  margin-bottom: 25px;
+}
+
+.error__description {
+  font-family: "BebasNeue-Regular";
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+
+.error__link {
+  color: #42A6E0 !important;
+}
 /*# sourceMappingURL=main.css.map */
