--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -149,3 +149,30 @@ body {
     font-size: 18px;
   }
 }
+
+.error {
+  width: 60vw;
+  height: 85vh;
+  background: #fff;
+  border-radius: $border-radius;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+  &__title {
+    font-family: $b-b;
+    font-size: 150px;
+    margin-bottom: 25px;
+  }
+  
+  &__description {
+    font-family: $b-r;
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+  
+  &__link {
+    color: $news-bg !important;
+  }
+}
