Сверстаны страницы добавления и редактирования

--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -2,11 +2,12 @@
 $bg: #0D4A61;
 $news-bg: #42A6E0;
 $font-color: lighten(#000, 10%);
-$btn-bg: #05D048;
+$btn-bg-green: #05D048;
+$btn-bg-red: #F74349;
 
 /* Fonts */
 $b-b: 'BebasNeue-Bold';
 $b-r: 'BebasNeue-Regular';
 
 /* Settings */
-$border-radius: 25px;
+$border-radius: 20px;
