--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,11 +43,26 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 50px 0;
+}
+
+.btn {
+  padding: 10px 25px;
+  border: none;
+  border-radius: 15px;
+  font-family: "BebasNeue-Regular";
+  font-size: 18px;
+  color: #fff;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.btn:hover {
+  cursor: pointer;
 }
 
 .news {
   width: 60vw;
+  padding: 50px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -61,7 +76,7 @@ body {
   width: 100%;
   padding: 25px;
   margin-bottom: 15px;
-  border-radius: 25px;
+  border-radius: 20px;
   background: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -107,19 +122,10 @@ body {
 }
 
 .news__btn {
-  padding: 10px 25px;
-  border: none;
-  border-radius: 25px;
-  font-family: "BebasNeue-Regular";
-  font-size: 18px;
   background: #05D048;
-  color: #fff;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
 }
 
 .news__btn:hover {
-  cursor: pointer;
   background: #049e37;
 }
 
@@ -128,7 +134,7 @@ body {
   height: 300px;
   margin: 15px 0;
   padding: 25px;
-  border-radius: 25px;
+  border-radius: 20px;
   background: #42A6E0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -147,7 +153,7 @@ body {
 .news__img {
   height: 250px;
   width: 250px;
-  border-radius: 25px;
+  border-radius: 20px;
   margin-right: 50px;
 }
 
@@ -166,7 +172,7 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background: #fff;
-  border-radius: 25px;
+  border-radius: 20px;
 }
 
 .news__desc {
@@ -198,13 +204,19 @@ body {
 .news__link {
   font-family: "BebasNeue-Regular";
   font-size: 18px;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.news__link:hover {
+  color: #42A6E0;
 }
 
 .error {
   width: 60vw;
   height: 85vh;
   background: #fff;
-  border-radius: 25px;
+  border-radius: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -218,6 +230,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 50px;
 }
 
 .error__title {
@@ -234,5 +247,109 @@ body {
 
 .error__link {
   color: #42A6E0 !important;
+}
+
+.add {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.edit {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form {
+  width: 30vw;
+  background: #42A6E0;
+  border-radius: 20px;
+  padding: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form__title {
+  font-family: "BebasNeue-Bold";
+  font-size: 32px;
+  color: #fff;
+  margin-bottom: 50px;
+}
+
+.form__input {
+  margin-bottom: 15px;
+  font-family: "BebasNeue-Regular";
+  font-size: 18px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 15px;
+}
+
+.form__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.form__file {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.form__file-label {
+  font-family: "BebasNeue-Regular";
+  font-size: 18px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 15px;
+  background: #fff;
+}
+
+.form__file-label:hover {
+  cursor: pointer;
+}
+
+.form__btn-pos {
+  margin-left: 15px;
+  background: #05D048;
+}
+
+.form__btn-pos:hover {
+  background: #049e37;
+}
+
+.form__btn-neg {
+  background: #F74349;
+}
+
+.form__btn-neg:hover {
+  background: #f5121a;
 }
 /*# sourceMappingURL=main.css.map */
