Реализованы CRUD-операции

--- a/public/css/_fonts.scss
+++ b/public/css/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: 'BebasNeue-Bold';
-  src: url(/public/fonts/BebasNeue-Bold.ttf);
+  font-family: 'Golos-Text_Bold';
+  src: url(/public/fonts/Golos-Text_Bold.ttf);
 }
 
 @font-face {
-  font-family: 'BebasNeue-Regular';
-  src: url(/public/fonts/BebasNeue-Regular.ttf);
+  font-family: 'Golos-Text_Regular';
+  src: url(/public/fonts/Golos-Text_Regular.ttf);
 }
