--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -6,8 +6,8 @@ $btn-bg-green: #05D048;
 $btn-bg-red: #F74349;
 
 /* Fonts */
-$b-b: 'BebasNeue-Bold';
-$b-r: 'BebasNeue-Regular';
+$b-b: 'Golos-Text_Bold';
+$b-r: 'Golos-Text_Regular';
 
 /* Settings */
 $border-radius: 20px;
