--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: 'BebasNeue-Bold';
-  src: url(/public/fonts/BebasNeue-Bold.ttf);
+  font-family: 'Golos-Text_Bold';
+  src: url(/public/fonts/Golos-Text_Bold.ttf);
 }
 
 @font-face {
-  font-family: 'BebasNeue-Regular';
-  src: url(/public/fonts/BebasNeue-Regular.ttf);
+  font-family: 'Golos-Text_Regular';
+  src: url(/public/fonts/Golos-Text_Regular.ttf);
 }
 
 /* Colors */
@@ -49,7 +49,7 @@ body {
   padding: 10px 25px;
   border: none;
   border-radius: 15px;
-  font-family: "BebasNeue-Regular";
+  font-family: "Golos-Text_Regular";
   font-size: 18px;
   color: #fff;
   -webkit-transition: .3s ease;
@@ -97,7 +97,7 @@ body {
 }
 
 .news__filter-title {
-  font-family: "BebasNeue-Bold";
+  font-family: "Golos-Text_Bold";
   margin-right: 5px;
 }
 
@@ -112,7 +112,7 @@ body {
 }
 
 .news__filter-value {
-  font-family: "BebasNeue-Regular";
+  font-family: "Golos-Text_Regular";
   margin-right: 5px;
 }
 
@@ -186,23 +186,23 @@ body {
 }
 
 .news__title {
-  font-family: "BebasNeue-Bold";
+  font-family: "Golos-Text_Bold";
   font-size: 28px;
   margin-bottom: 15px;
 }
 
 .news__description {
-  font-family: "BebasNeue-Regular";
-  font-size: 22px;
+  font-family: "Golos-Text_Regular";
+  font-size: 18px;
 }
 
 .news__date {
-  font-family: "BebasNeue-Bold";
+  font-family: "Golos-Text_Bold";
   font-size: 18px;
 }
 
 .news__link {
-  font-family: "BebasNeue-Regular";
+  font-family: "Golos-Text_Regular";
   font-size: 18px;
   -webkit-transition: .3s ease;
   transition: .3s ease;
@@ -234,13 +234,13 @@ body {
 }
 
 .error__title {
-  font-family: "BebasNeue-Bold";
+  font-family: "Golos-Text_Bold";
   font-size: 150px;
   margin-bottom: 25px;
 }
 
 .error__description {
-  font-family: "BebasNeue-Regular";
+  font-family: "Golos-Text_Regular";
   font-size: 18px;
   margin-bottom: 15px;
 }
@@ -292,7 +292,7 @@ body {
 }
 
 .form__title {
-  font-family: "BebasNeue-Bold";
+  font-family: "Golos-Text_Bold";
   font-size: 32px;
   color: #fff;
   margin-bottom: 50px;
@@ -300,18 +300,18 @@ body {
 
 .form__input {
   margin-bottom: 15px;
-  font-family: "BebasNeue-Regular";
+  font-family: "Golos-Text_Regular";
   font-size: 18px;
   padding: 10px 15px;
   border: none;
   border-radius: 15px;
 }
 
-.form__image {
+.form__choose {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
 .form__file {
@@ -324,7 +324,7 @@ body {
 }
 
 .form__file-label {
-  font-family: "BebasNeue-Regular";
+  font-family: "Golos-Text_Regular";
   font-size: 18px;
   padding: 10px 15px;
   border: none;
@@ -334,6 +334,17 @@ body {
 
 .form__file-label:hover {
   cursor: pointer;
+}
+
+.form__image {
+  width: 150px;
+  height: 150px;
+  border-radius: 20px;
+  margin-bottom: 50px;
+}
+
+.form__image_disable {
+  display: none;
 }
 
 .form__btn-pos {
