--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -73,6 +73,7 @@ body {
     
     &-btn {
       display: flex;
+      align-items: center;
       &:hover {
         cursor: pointer;
       }
@@ -84,8 +85,12 @@ body {
     }
     
     &-icon {
-      width: 10px;
-      height: 10px;
+      width: 16px;
+      height: 16px;
+      
+      &_active {
+        transform: rotate(180deg);
+      }
     }
   }
   
@@ -278,5 +283,41 @@ body {
     &:hover {
       background: darken($btn-bg-red, 10%);
     }
+  }
+}
+
+.modal {
+  padding: 25px;
+  border-radius: $border-radius;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  font-family: $b-r;
+  font-size: 18px;
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(13, 74, 97, 0.2);
+  -moz-box-shadow: 0px 0px 10px 5px rgba(13, 74, 97, 0.2);
+  box-shadow: 0px 0px 10px 5px rgba(13, 74, 97, 0.2);
+  opacity: 0;
+  
+  &__btn {
+    margin: 5px 0;
+    &:hover {
+      cursor: pointer;
+      font-family: $b-b;
+    }
+    &_active {
+      font-family: $b-b;
+    }
+  }
+  
+  &_disable {
+    display: none;
+  }
+  
+  &_visible {
+    opacity: 100;
   }
 }
