--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -46,7 +46,6 @@ body {
 }
 
 .news {
-  width: 60vw;
   padding: 50px 0;
   display: flex;
   flex-direction: column;
@@ -57,14 +56,10 @@ body {
     margin-bottom: 15px;
     border-radius: $border-radius;
     background: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
   
   &__filter {
     font-size: 18px;
-    display: flex;
     
     &-title {
       font-family: $b-b;
@@ -103,24 +98,21 @@ body {
   
   &__item {
     width: 100%;
-    height: 300px;
+    min-height: 300px;
     margin: 15px 0;
     padding: 25px;
     border-radius: $border-radius;
     background: $news-bg;
-    display: flex;
     
     &-footer {
-      display: flex;
-      justify-content: space-between;
+      margin-top: 15px;
     }
   }
   
   &__img {
-    height: 250px;
-    width: 250px;
     border-radius: $border-radius;
-    margin-right: 50px;
+    object-fit: cover;
+    object-position: center;
   }
   
   &__text {
@@ -141,18 +133,21 @@ body {
   
   &__title {
     font-family: $b-b;
-    font-size: 28px;
+    font-size: 24px;
     margin-bottom: 15px;
   }
   
   &__description {
     font-family: $b-r;
-    font-size: 18px;
+    font-size: 16px;
   }
   
   &__date {
     font-family: $b-b;
     font-size: 18px;
+    &_light {
+      color: darken(#fff, 40%);
+    }
   }
   
   &__link {
@@ -163,6 +158,34 @@ body {
       color: $news-bg;
     }
   }
+  
+  &__paginate {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+  }
+  
+  &__page-btn {
+    padding: 15px 25px;
+    background: $news-bg;
+    color: #000;
+    border-radius: $border-radius;
+    font-family: $b-r;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    transition: .3s ease;
+    margin: 0 5px;
+    
+    &:hover {
+      background: darken($news-bg, 10%);
+      cursor: pointer;
+    }
+  }
+  
 }
 
 .error {
@@ -210,7 +233,6 @@ body {
 }
 
 .form {
-  width: 30vw;
   background: $news-bg;
   border-radius: $border-radius;
   padding: 25px;
@@ -254,6 +276,10 @@ body {
     border: none;
     border-radius: 15px;
     background: #fff;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     &:hover {
       cursor: pointer;
     }
