--- a/public/css/_media.scss
+++ b/public/css/_media.scss
@@ -26,7 +26,7 @@
 			&-footer {
 				display: flex;
 				flex-direction: column;
-				justify-content: space-between;
+				justify-content: center;
 			}
 			
 		}
