--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,9 +59,9 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .news__img {
     display: none;
@@ -454,7 +454,10 @@ body {
 
 .news__date {
   font-family: "Golos-Text_Bold";
-  font-size: 18px;
+  font-size: 16px;
+  padding: 5px 15px;
+  background: #f2f2f2;
+  border-radius: 20px;
 }
 
 .news__date_light {
@@ -602,6 +605,14 @@ body {
   padding: 10px 15px;
   border: none;
   border-radius: 15px;
+}
+
+.form__input:focus {
+  outline: none;
+}
+
+.form__input_area {
+  height: 200px;
 }
 
 .form__choose {
