--- a/public/css/_media.scss
+++ b/public/css/_media.scss
@@ -45,6 +45,10 @@
 		width: 90vw;
 	}
 	
+	.error {
+		width: 90vw;
+	}
+	
 }
 
 @media screen and (min-width: 500px) and (max-width: 767px) {
@@ -90,6 +94,10 @@
 		width: 80vw;
 	}
 	
+	.error {
+		width: 80vw;
+	}
+	
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -126,6 +134,10 @@
 	}
 	
 	.form {
+		width: 60vw;
+	}
+	
+	.error {
 		width: 60vw;
 	}
 	
@@ -169,6 +181,10 @@
 		width: 50vw;
 	}
 	
+	.error {
+		width: 50vw;
+	}
+	
 }
 
 @media screen and (min-width: 1200px) {
@@ -206,6 +222,10 @@
 	
 	.form {
 		width: 30vw;
+	}
+	
+	.error {
+		width: 40vw;
 	}
 	
 }
